--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ POSTGRES_DB=nestjs
 PORT=5000
 JWT_SECRET=secret
 JWT_EXPIRATION_TIME=600
+AWS_REGION=sa-east-1
+AWS_ACCESS_KEY_ID=************
+AWS_SECRET_ACCESS_KEY=************
+AWS_PUBLIC_BUCKET_NAME=nestjs-labs-public-bucket
